--- a/lung_function/scripts/jupyter_notebooks/ttest.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/ttest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,10 +17,10 @@
      "output_type": "stream",
      "text": [
       "number of samples: 253\n",
-      "means of data1: 0.5139841897233202\n",
-      "means of data2: 0.48424703557312254\n",
-      "t-statistic: 1.0209728559960038\n",
-      "p-value: 0.30824643548309566\n",
+      "means of data1: 1.0654664031620553\n",
+      "means of data2: 1.1251699604743084\n",
+      "t-statistic: -1.01843911352402\n",
+      "p-value: 0.3094460793204691\n",
       "不存在显著差异（无法拒绝零假设）\n"
      ]
     }
@@ -30,41 +30,42 @@
     "from scipy.stats import ttest_rel, ttest_ind\n",
     "\n",
     "# 示例数据\n",
-    "ref_fpath = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2730/valid_label.csv\"\n",
-    "data1_fpath = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2655/valid_pred.csv\"  # single output\n",
-    "data2_fpath = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2730/valid_pred.csv\"\n",
+    "for mode in ['valid', 'test']:\n",
+    "    ref_fpath = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2730/{mode}_label.csv\"\n",
+    "    data1_fpath = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2663/{mode}_pred.csv\"  # single output\n",
+    "    data2_fpath = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2730/{mode}_pred.csv\"\n",
     "\n",
-    "data1 = pd.read_csv(data1_fpath, index_col=0)\n",
-    "data2 = pd.read_csv(data2_fpath, index_col=0)\n",
-    "ref = pd.read_csv(ref_fpath, index_col=0)\n",
+    "    data1 = pd.read_csv(data1_fpath, index_col=0)\n",
+    "    data2 = pd.read_csv(data2_fpath, index_col=0)\n",
+    "    ref = pd.read_csv(ref_fpath, index_col=0)\n",
     "\n",
-    "data1 = data1.rename(columns={'DLCOc_SB': 'DLCOc', 'TLC_He': 'TLC'})  \n",
-    "data2 = data2.rename(columns={'DLCOc_SB': 'DLCOc', 'TLC_He': 'TLC'})  \n",
-    "ref = ref.rename(columns={'DLCOc_SB': 'DLCOc', 'TLC_He': 'TLC'})  \n",
+    "    data1 = data1.rename(columns={'DLCOc_SB': 'DLCOc', 'TLC_He': 'TLC'})  \n",
+    "    data2 = data2.rename(columns={'DLCOc_SB': 'DLCOc', 'TLC_He': 'TLC'})  \n",
+    "    ref = ref.rename(columns={'DLCOc_SB': 'DLCOc', 'TLC_He': 'TLC'})  \n",
     "\n",
-    "for col in ['DLCOc', 'FEV1', 'FVC', 'TLC']:\n",
-    "    try:\n",
-    "        # 使用 paired-t 检验比较两列的均值\n",
-    "        print(f\"number of samples: {len(data1[col])}\")\n",
-    "        print(f'means of data1: {(data1[col] - ref[col]).abs().mean()}')\n",
-    "        print(f'means of data2: {(data2[col] - ref[col]).abs().mean()}')\n",
+    "    for col in ['DLCOc', 'FEV1', 'FVC', 'TLC']:\n",
+    "        try:\n",
+    "            # 使用 paired-t 检验比较两列的均值\n",
+    "            print(f\"number of samples: {len(data1[col])}\")\n",
+    "            print(f'means of data1: {(data1[col] - ref[col]).abs().mean()}')\n",
+    "            print(f'means of data2: {(data2[col] - ref[col]).abs().mean()}')\n",
     "\n",
-    "        t_stat, p_value = ttest_rel((data1[col] - ref[col]).abs(), (data2[col] - ref[col]).abs())\n",
+    "            t_stat, p_value = ttest_rel((data1[col] - ref[col]).abs(), (data2[col] - ref[col]).abs())\n",
     "\n",
-    "        # 输出 t 检验结果\n",
-    "        print(\"t-statistic:\", t_stat)\n",
-    "        print(\"p-value:\", p_value)\n",
+    "            # 输出 t 检验结果\n",
+    "            print(\"t-statistic:\", t_stat)\n",
+    "            print(\"p-value:\", p_value)\n",
     "\n",
-    "        # 选择一个显著性水平（如 0.05）\n",
-    "        alpha = 0.05\n",
+    "            # 选择一个显著性水平（如 0.05）\n",
+    "            alpha = 0.05\n",
     "\n",
-    "        # 判断是否存在显著差异\n",
-    "        if p_value < alpha:\n",
-    "            print(\"存在显著差异（拒绝零假设）\")\n",
-    "        else:\n",
-    "            print(\"不存在显著差异（无法拒绝零假设）\")\n",
-    "    except:\n",
-    "        pass\n"
+    "            # 判断是否存在显著差异\n",
+    "            if p_value < alpha:\n",
+    "                print(\"存在显著差异（拒绝零假设）\")\n",
+    "            else:\n",
+    "                print(\"不存在显著差异（无法拒绝零假设）\")\n",
+    "        except:\n",
+    "            pass\n"
    ]
   },
   {
